--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,18 +30,6 @@ bindsym $mod+Shift+e exec --no-startup-id i3-logout
 bindsym $mod+Ctrl+e exec --no-startup-id i3-reboot
 
 # Capture all F-keys as I don't want programs using them
-# bindsym F1 exec --no-startup-id true
-# bindsym F2 exec --no-startup-id true
-# bindsym F3 exec --no-startup-id true
-# #bindsym F4 exec --no-startup-id true
-# #bindsym F5 exec --no-startup-id true
-# bindsym F6 exec --no-startup-id true
-# bindsym F7 exec --no-startup-id true
-# bindsym F8 exec --no-startup-id true
-# bindsym F9 exec --no-startup-id true
-# bindsym F10 exec --no-startup-id true
-# bindsym F11 exec --no-startup-id true
-# bindsym F12 exec --no-startup-id true
 
 ###                        ###
 # Window Management Settings #
@@ -232,10 +220,13 @@ bindsym XF86AudioMute	     exec --no-startup-id pulseaudio-ctl mute
 bindsym $mod+l exec --no-startup-id xset s activate
 
 # Dismiss notification alert
-# bindsym F5 exec --no-startup-id g810-led -fx color logo aa0000 && rm ~/.critical_active
+bindsym F17 exec --no-startup-id g810-led -fx color logo aa0000 && rm ~/.critical_active
 
-# # Toggle desktop UI mode
-# bindsym F4 exec --no-startup-id toggle-mode
+# Toggle desktop UI mode
+bindsym F16 exec --no-startup-id toggle-mode
+
+# Activate Siri
+bindsym F15 exec --no-startup-id dbus-send --print-reply --system --dest=org.ofono /hfp/org/bluez/hci0/dev_14_9D_99_EA_47_52 org.ofono.Handsfree.SetProperty string:"VoiceRecognition" variant:boolean:true
 
 ###              ###
 # Startup Programs #
