--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,9 @@
-[xin_-1]
+[xin_0]
+file=/home/stephen/Wallpapers/SHIELD-02.png
+mode=4
+bgcolor=#000000
+
+[xin_1]
 file=/home/stephen/Wallpapers/SHIELD-02.png
 mode=4
 bgcolor=#000000
