--- a/.config/systemd/user/polybar@.service
+++ b/.config/systemd/user/polybar@.service
@@ -4,7 +4,7 @@ PartOf = graphical@i3.target
 
 [Service]
 Type=simple
-ExecStart=/home/stephen/.local/bin/polybar-start.sh %i
+ExecStart=%h/.local/bin/polybar-start.sh %i
 
 [Install]
 WantedBy=graphical@i3.target
